# eaton

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  ReadMe.md  ReadMe_task.md  Solutions.md  pyproject.toml
.github/workflows/: ci.yaml
src/: app.py  config.py
test/: test_app.py
