[project]
name = "python_microservice"
version = "0.1.0"
description = "A simple Python microservice using Flask"

dependencies = [
    "flask==3.1.2",
    "pytest==8.4.2"
]
requires-python = ">=3.10"

readme = "README.md"
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "config"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
skips = ["B101", "B104"]
exclude_dirs = ["test"]
